[gd_scene load_steps=12 format=3 uid="uid://cgu0vbr50x7di"]

[ext_resource type="Script" uid="uid://cluu0cgltsenj" path="res://gamemanager/gamemanager.gd" id="1_htktm"]
[ext_resource type="PackedScene" uid="uid://bilai15byqef2" path="res://ui/screens/pause-menu/pause_menu.tscn" id="2_b2lg8"]
[ext_resource type="PackedScene" uid="uid://bsumwqbyhh2jj" path="res://levels/example-level/example.tscn" id="2_yscq4"]
[ext_resource type="PackedScene" uid="uid://dnkrlhhck540r" path="res://levels/dont-move/dont-move.tscn" id="3_3c0xs"]
[ext_resource type="Theme" uid="uid://hheneshfv1b2" path="res://ui/themes/your_theme.tres" id="3_8qpx4"]
[ext_resource type="PackedScene" uid="uid://d3ktphdp38cue" path="res://levels/arrow-mashing/arrow_mashing.tscn" id="4_t8gma"]
[ext_resource type="PackedScene" uid="uid://c7la3ptoomkfq" path="res://levels/word_search/word_search.tscn" id="5_i7ped"]
[ext_resource type="Texture2D" uid="uid://77at6m3gk65p" path="res://textures/stopclock.png" id="7_3c0xs"]
[ext_resource type="PackedScene" uid="uid://cqjqjog7n71ke" path="res://ui/screens/transition-screen/transition-screen.tscn" id="8_y84hv"]

[sub_resource type="LabelSettings" id="LabelSettings_3c0xs"]
font_size = 32
outline_size = 8
outline_color = Color(0.21568628, 0.19215687, 0.19215687, 1)
shadow_size = 0

[node name="Gamemanager" type="Node"]
process_mode = 3
script = ExtResource("1_htktm")
levels = Array[PackedScene]([ExtResource("2_yscq4"), ExtResource("3_3c0xs"), ExtResource("4_t8gma"), ExtResource("5_i7ped")])

[node name="MenuLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 0
follow_viewport_enabled = true

[node name="DebugLabel" type="Label" parent="MenuLayer"]
unique_name_in_owner = true
visible = false
offset_left = 23.0
offset_top = 16.0
offset_right = 600.0
offset_bottom = 308.0
theme = ExtResource("3_8qpx4")

[node name="PauseMenu" parent="MenuLayer" instance=ExtResource("2_b2lg8")]
unique_name_in_owner = true
visible = false
theme = ExtResource("3_8qpx4")

[node name="GameUI" type="Control" parent="MenuLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_8qpx4")

[node name="TimeUI" type="HBoxContainer" parent="MenuLayer/GameUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -112.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
alignment = 2

[node name="Label3" type="Label" parent="MenuLayer/GameUI/TimeUI"]
visible = false
layout_mode = 2
text = "Time:"

[node name="TimerLabel" type="Label" parent="MenuLayer/GameUI/TimeUI"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "9"
label_settings = SubResource("LabelSettings_3c0xs")
vertical_alignment = 2

[node name="ClockIcon" type="TextureRect" parent="MenuLayer/GameUI/TimeUI"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("7_3c0xs")
stretch_mode = 5

[node name="HeartsContainer" type="HBoxContainer" parent="MenuLayer/GameUI"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 102.0
offset_bottom = 38.0
theme_override_constants/separation = 2

[node name="transition-screen" parent="MenuLayer" instance=ExtResource("8_y84hv")]
unique_name_in_owner = true

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="continue_btn_pressed" from="MenuLayer/PauseMenu" to="." method="resume"]
[connection signal="exit_game_btn_pressed" from="MenuLayer/PauseMenu" to="." method="_quit_game"]
[connection signal="exit_to_main_menu_btn_pressed" from="MenuLayer/PauseMenu" to="." method="_return_to_title_screen"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
